--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ bootJar {
     baseName = 'InTest'
     group 'org.rcslab'
     mainClassName = 'org.rcslab.InTest'
-    version =  '1.0-SNAPSHOT'
+    version =  '1.1'
 }
 
 repositories {
