no docker - need mer, add readme and dev profile

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
 server.port = ${RCSLAB_T1_PORT}
-sqlite.path = ${RCSLAB_T1_DB_PATH}/data.sqlite
+sqlite.path = jdbc:sqlite:${RCSLAB_T1_DB_PATH}/data.sqlite
